--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,7 @@
-<h1>what up ywam-g's</h1>
+<div class="hero-unit span10 offset1">
+
+  <h1>Loren ipsum sit dolor amet</h1>
+
+  <p>Because YWAM deserves its own dummy text...</p>
+
+</div>
