rake tasking and crawling stuff!

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,3 +5,9 @@
   <p>Because YWAM deserves its own dummy text...</p>
 
 </div>
+
+<% @websites.each do |website| %>
+
+  <p><%=website.url%></p>
+
+<% end %>
