giving the front page some of our newfound data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,11 @@
 
   <div class="container row-fluid">
     
-    <%= yield %>
+    <div class="span8 offset2">
+
+      <%= yield %>
+
+    </div>
 
   </div>
 
