--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,11 @@
   
   <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+
+  <%= javascript_include_tag "d3" %>
+  <%= javascript_include_tag "d3.layout.cloud" %>
   <%= javascript_include_tag "application" %>
+
   <%= csrf_meta_tags %>
 
 </head>
