--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,9 +2,9 @@
 
   <div class="hero-unit span12">
 
-    <h1>Loren ipsum sit dolor amet</h1>
+    <h1>YWAM Ipsum</h1>
 
-    <p>Because YWAM deserves its own dummy text...</p>
+    <p>The biggest YWAMese buzz words. Now in dummy text.</p>
 
   </div>
 
@@ -12,28 +12,71 @@
 
 <div class="row-fluid">
 
-  <div class="span6">
+  <div class="span4">
 
-    <h2>Top words</h2>
-
-    <ul>
-      <% @top_words.each do |top_word| %>
-        <li><%=top_word.word%></li>
-      <% end %>
-    </ul>
+    <h3><%= @number_of_words %> words</h3>
+    <h3><%= @number_of_pages %> pages</h3>
+    <h3><%= @number_of_websites %> websites</h3>
 
   </div>
 
-  <div class="span6">
+  <div class="span4">
 
     <h2>Websites crawled</h2>
 
     <ul>
       <% @websites.each do |website| %>
-        <li><%=website.url%></li>
+        <li><a href="http://<%= website.url %>"><%= website.url %></a></li>
       <% end %>
     </ul>
 
+    <form class="form-inline" method="POST" action="/websites">
+
+      <label for="url">Add your YWAM website:</label>
+      <input type="text" id="url" name="url" placeholder="http://">
+
+      <button type="submit" class="btn">Add</button>
+
+    </form>
+
+  </div>
+
 </div>
+
+<div class="row-fluid">
+
+  <div class="span12 top-words">
+
+    <h2>Cloud</h2>
+
+    <p class="muted">(Excluding boring common words 'a', 'an', 'the', 'and', 'for', 'of', 'to', 'in', 'is', 'with')</p>
+
+    <ul>
+      <% @top_words.each do |top_word| %>
+        <li class="word">
+          <span class="muted word-count"><%= top_word.count %></span>
+          <span class="word-text"><%= top_word.word %></span>
+        </li>
+      <% end %>
+    </ul>
+
+  </div>
+
+</div>
+
+<div class="row-fluid">
+
+  <div class="span4">
+    <h2>Top 50</h2>
+    <ul>
+      <% @top_words.each do |top_word| %>
+        <li class="word">
+          <span class="muted word-count"><%= top_word.count %></span>
+          <span class="word-text"><%= top_word.word %></span>
+        </li>
+      <% end %>
+    </ul>
+
+  </div>
 
 </div>
