fixes bug with checking bytesize

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 
     <h1>YWAM Ipsum</h1>
 
-    <p>The biggest YWAMese buzz words. Now in dummy text.</p>
+    <p>The most populair YWAM buzz words. Now in dummy text.</p>
 
   </div>
 
