--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,9 +2,9 @@
 
   <div class="hero-unit span12">
 
-    <h1>YWAM Ipsum</h1>
+    <h1>YWAMese</h1>
 
-    <p>The most populair YWAM buzz words. Now in dummy text.</p>
+    <p>The most populair YWAM buzz words. Now all together.</p>
 
   </div>
 
@@ -45,7 +45,7 @@
 
 <div class="row-fluid">
 
-  <div class="span4">
+  <div class="span6">
     <h2>Top 50</h2>
     <ul>
       <% @top_words.each do |top_word| %>
@@ -58,7 +58,7 @@
 
   </div>
 
-  <div class="span4">
+  <div class="span6">
 
     <h2>Websites crawled</h2>
 
